--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -16,10 +16,32 @@
     @RenderSection("Stylesheets", required: false)
 </head>
 <body>
-    <!--<div class="body-click"></div>-->
+    <div class="body-outside"></div>
+    
+    <div class="drawer">
+        <div class="dw-top">
+            <div class="dw-account">
+                asd
+            </div>
+            <div class="dw-close">
+                <i class="bi bi-x-lg"></i>
+            </div>
+        </div>
+        <div class="dw-list">
+            <ul>
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">Library</a></li>
+                <li><a href="#">Donate</a></li>
+                <li><a href="#">Friends</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">History</a></li>
+            </ul>
+        </div>
+        <a href="#" class="dw-settings">Settings</a>
+    </div>
     <header>
         <div class="container-fluid header-wrap">
-            <div class="drawer-cont">
+            <div class="drawerbtn-cont">
                 <i class="bi bi-list"></i>
             </div>
             <div class="logo-cont">
@@ -53,7 +75,7 @@
                             <li><a href="#">Anasaffyfa</a></li>
                             <li><a href="#">Anasafffa</a></li>
                         </ul>
-                        <a href="#" class="a_dd_settings">Logout</a>
+                        <a href="#" class="acc_dd_settings">Logout</a>
                     </div>
                 </div>
             </div>
