--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -19,12 +19,13 @@ ul,ol,li,b,h1,h2,h3,h4,h6,a,p{
 a:hover{
     color: inherit;
 }
-.body-click{
+.body-outside{
     display: none;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     z-index: 899;
+    background-color: #00000060;
 }
 
 /*--------DARK MODE----------*/
@@ -58,7 +59,7 @@ header{
         height: 5.1rem;
     }
 }
-.drawer-cont{
+.drawerbtn-cont{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -70,6 +71,67 @@ header{
         cursor: pointer;
         &:hover {
             font-size: 3.2rem;
+        }
+    }
+}
+.drawer{
+    display: none;
+    flex-direction: column;
+    z-index: 901;
+    position: absolute;
+    height: 100%;
+    min-width: 70%;
+    top:0;
+    left: 0;
+    background-color: $sitebgcolor;
+    font-size: 1.8rem;
+    font-family: 'Itim', cursive;
+    .dw-top{
+        display: flex;
+        flex-direction: row;
+        height: 100px;
+        .dw-close{
+            padding: 10px;
+            i{
+                font-size: 2rem;
+                color: $textcolor;
+            }
+        }
+        .dw-account{
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            //justify-content: center;
+        }
+    }
+    .dw-list{
+        flex-grow: 1;
+        overflow-y: scroll;
+        > ul{
+            > li {
+                border-bottom: 1px solid $frontbgcolor;
+                &:last-child{
+                    border-bottom: none;
+                }
+                > a{
+                    padding: 4px 20px;
+                    color: $textcolor !important;
+                    transition: 0.2s ease;
+                    &:hover{
+                        background-color: $frontbgcolor;
+                    }
+                }
+            }
+        }
+    }
+    .dw-settings{
+        margin-top: auto;
+        padding: 4px 20px;
+        color: #ffffff;
+        transition: 0.2s ease;
+        background-color: #b73d3d;
+        &:hover{
+            background-color: #b94f4f;
         }
     }
 }
@@ -228,7 +290,7 @@ header{
                 }
             }
         }
-        .a_dd_settings{
+        .acc_dd_settings{
             margin-top: 14px;
             padding: 4px 20px;
             text-align: center;
@@ -262,6 +324,9 @@ header{
     .searchbar-cont{
         display: flex;
     }
+    .drawer{
+        min-width: 300px;
+    }
 }
 
 // Medium devices (tablets, 768px and up)
@@ -275,7 +340,7 @@ header{
     .logo-cont{
         display: flex;
     }
-    .drawer-cont{
+    .drawerbtn-cont{
         display: none;
     }
 }
@@ -299,7 +364,7 @@ header{
     .searchbar-wrap{
         max-width: 550px !important;
     }
-    .drawer-cont{
+    .drawerbtn-cont{
         padding-left: 16px;
     }
     .header_right_section{
