--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -70,18 +70,24 @@ header .header-wrap {
   font-size: 3.2rem;
 }
 
+.drawer-active {
+  width: 70% !important;
+}
+
 .drawer {
-  display: none;
+  display: flex;
   flex-direction: column;
   z-index: 901;
-  position: absolute;
-  height: 100%;
-  min-width: 70%;
+  position: fixed;
   top: 0;
   left: 0;
+  height: 100%;
+  width: 0;
   background-color: #1D1D1D;
   font-size: 1.8rem;
   font-family: "Itim", cursive;
+  overflow-x: hidden;
+  transition: width 0.3s ease;
 }
 .drawer .dw-top {
   display: flex;
@@ -263,7 +269,7 @@ header .header-wrap {
   z-index: 900;
   display: none;
   opacity: 0;
-  transition: 0.1s ease opacity;
+  transition: opacity 0.1s ease;
   position: absolute;
   top: 52px;
   right: 0;
@@ -324,8 +330,8 @@ header .header-wrap {
     display: flex;
   }
 
-  .drawer {
-    min-width: 300px;
+  .drawer-active {
+    width: 300px !important;
   }
 }
 @media (min-width: 768px) {
