--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -29,15 +29,15 @@
         </div>
         <div class="dw-list">
             <ul>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Library</a></li>
-                <li><a href="#">Donate</a></li>
-                <li><a href="#">Friends</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">History</a></li>
+                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-person"></i></div>Profile</a></li>
+                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-book"></i></div>Library</a></li>
+                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-currency-dollar"></i></div>Donate</a></li>
+                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-people"></i></div>Friends</a></li>
+                <li><a href="#"><div class="dw-icon-cont"></div>News</a></li>
+                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-clock-history"></i></div>History</a></li>
             </ul>
         </div>
-        <a href="#" class="dw-settings">Settings</a>
+        <a href="#" class="dw-settings"><div class="dw-icon-cont"><i class="bi bi-gear-fill"></i></div>Settings</a>
     </div>
     <header>
         <div class="container-fluid header-wrap">
