--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Doppio+One&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
@@ -21,7 +23,13 @@
     <div class="drawer">
         <div class="dw-top">
             <div class="dw-account">
-                asd
+                <div class="dw-userimg">
+                    <img src="https://icon-library.com/images/no-user-image-icon/no-user-image-icon-0.jpg">
+                </div>
+                <!--<i class="bi bi-person-bounding-box dw-userimg"></i>-->
+                <span class="dw-username">MrBombastic</span>
+                <span class="dw-acc-info">Points: 152254</span>
+                <span class="dw-acc-info">Avg rate: 8.4/10</span>
             </div>
             <div class="dw-close">
                 <i class="bi bi-x-lg"></i>
