--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -94,19 +94,41 @@ header{
     .dw-top{
         display: flex;
         flex-direction: row;
-        height: 100px;
+        color: $textcolor;
+        border-bottom: 1px solid $frontbgcolor;
+        padding-bottom: 10px;
         .dw-close{
             padding: 10px;
             i{
                 font-size: 2rem;
-                color: $textcolor;
             }
         }
         .dw-account{
             flex-grow: 1;
             display: flex;
             flex-direction: column;
-            //justify-content: center;
+            justify-content: center;
+            text-align: center;
+            .dw-userimg{
+                display: flex;
+                justify-content: center;
+                padding: 1rem 0 10px;
+                img{
+                    width: 4rem;
+                    height: 4rem;
+                    border-radius: 6px;
+                }
+            }
+            .dw-username{
+                font-family: 'Doppio One', sans-serif;
+                padding-bottom: 8px;
+                font-size: 1.1rem;
+            }
+            .dw-acc-info{
+                font-family: 'Hubballi', cursive;
+                padding-bottom: 6px;
+                font-size: 1.2rem;
+            }
         }
     }
     .dw-icon-cont{
@@ -116,14 +138,11 @@ header{
         }
     }
     .dw-list{
+        padding-top: 10px;
         flex-grow: 1;
         overflow-y: scroll;
         > ul{
             > li {
-                border-bottom: 1px solid $frontbgcolor;
-                &:last-child{
-                    border-bottom: none;
-                }
                 > a{
                     padding: 4px 20px;
                     color: $textcolor !important;
