drawer scroll fix

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
                 </div>
                 <div class="account-cont">
                     <div class="ppic-wrap">
-                        <img>
+                        <img src="https://icon-library.com/images/no-user-image-icon/no-user-image-icon-0.jpg">
                     </div>
                     <div class="dropdown_icon-wrap">
                         <i class="bi bi-caret-down-fill"></i>
