--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -140,7 +140,7 @@ header{
     .dw-list{
         padding-top: 10px;
         flex-grow: 1;
-        overflow-y: scroll;
+        overflow-y: auto;
         > ul{
             > li {
                 > a{
@@ -153,6 +153,19 @@ header{
                     }
                 }
             }
+        }
+        &::-webkit-scrollbar-track{
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+            background-color: #F5F5F5;
+        }
+        &::-webkit-scrollbar{
+            width: 6px;
+            background-color: #F5F5F5;
+        }
+        &::-webkit-scrollbar-thumb{
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+            border-radius: 10px;
+            background-color: #555;
         }
     }
     .dw-settings{
@@ -261,13 +274,12 @@ header{
     .ppic-wrap{
         width: 50px;
         height: 50px;
-        background-color: gray;
         border-radius: 6px;
+        overflow: hidden;
         cursor: pointer;
         img{
             width: 100%;
             height: 100%;
-            border-radius: 6px;
         }
     }
     .dropdown_icon-wrap{
