--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -4,6 +4,19 @@ html {
   position: relative;
   height: 100%;
 }
+html::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #F5F5F5;
+}
+html::-webkit-scrollbar {
+  width: 6px;
+  background-color: #F5F5F5;
+}
+html::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #555;
+}
 
 body {
   padding: 0;
@@ -356,18 +369,6 @@ header .header-wrap {
 
 /*----------TEMPLATE_DESKTOP---------*/
 @media (min-width: 576px) {
-  .donate-shortcut {
-    display: block;
-  }
-
-  .search-shortcut {
-    display: none;
-  }
-
-  .searchbar-cont {
-    display: flex;
-  }
-
   .drawer-active {
     width: 300px !important;
   }
@@ -395,6 +396,19 @@ header .header-wrap {
   }
   .logo-cont span {
     font-size: 2.5rem;
+  }
+}
+@media (min-width: 360px) {
+  .search-shortcut {
+    display: none;
+  }
+
+  .searchbar-cont {
+    display: flex;
+  }
+
+  .donate-shortcut {
+    display: block;
   }
 }
 @media (min-width: 1300px) {
