added the first versions of nav, left nav, posts

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -5,3 +5,60 @@
     }
 }
 
+<div class="nav-cont">
+    <div class="navcont-temp">
+
+    </div>
+    <div class="nav-ad1">
+
+    </div>
+    <nav class="sticky-nav">
+        
+    </nav>
+</div>
+<div class="posts-cont">
+    <div class="post-options">
+        <div class="po-orderby">
+            <p class="orderby-btn p-option">Order By</p>
+            <p class="orderby-value">(Recent)</p>
+        </div>
+        <span class="po-type p-option">
+            Type
+        </span>
+        <span class="po-filters p-option">
+            Filter
+        </span>
+    </div>
+    <div class="post">
+        <div class="p-header">
+             <div class="p-title">
+                <span>Odin the Omnipotent</span>
+             </div>
+             <div class="p-menu">
+                <i class="bi bi-three-dots"></i>
+             </div>
+        </div>
+        <div class="p-body">
+             After his father’s death, Odin was not going to be so peaceful. Old ways died as the new skyfather born.
+        </div>
+        <div class="p-footer">
+             aaaa
+        </div>
+    </div>
+    <div class="post">
+        <div class="p-header">
+             <div class="p-title">
+                <span>Davy Jones</span>
+             </div>
+             <div class="p-menu">
+                <i class="bi bi-three-dots"></i>
+             </div>
+        </div>
+        <div class="p-body">
+             Jones fell in love with the goddess Calypso. He agreed to guide the dead but Calypso was a bi*ch. When he returned from duty, she was not there.
+        </div>
+        <div class="p-footer">
+             aaaa
+        </div>
+    </div>
+</div>
