--- a/OmneFictio.Web/wwwroot/css/index.css
+++ b/OmneFictio.Web/wwwroot/css/index.css
@@ -1,1 +1,148 @@
-/*# sourceMappingURL=index.css.map */
+/*--------DARK MODE----------*/
+main {
+  display: flex;
+  flex-direction: row;
+  color: #ffffff;
+}
+
+.posts-cont {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+.posts-cont .post-options {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 6px;
+}
+.posts-cont .post-options .p-option {
+  font-size: 1.6rem;
+  padding: 10px;
+  text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.3137254902);
+  font-family: "Josefin Sans", sans-serif;
+  cursor: pointer;
+}
+.posts-cont .post-options .p-option:hover {
+  text-decoration: underline;
+}
+.posts-cont .post-options .po-orderby {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.posts-cont .post-options .po-orderby .orderby-btn {
+  margin-right: 6px;
+}
+.posts-cont .post-options .po-orderby .orderby-value {
+  font-size: 1.2rem;
+}
+.posts-cont .post-options .po-orderby .orderby-value:hover {
+  text-decoration: unset;
+}
+.posts-cont .post-options .po-type {
+  margin-left: auto;
+  margin-right: 16px;
+}
+
+.post {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 12px;
+  background-color: #313131;
+}
+.post:last-child {
+  margin-bottom: unset;
+}
+.post .p-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.post .p-header .p-title {
+  padding: 10px;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 600;
+}
+.post .p-header .p-menu {
+  display: flex;
+  height: 100%;
+  padding: 0 10px;
+  font-size: 2rem;
+}
+.post .p-body {
+  padding: 0 10px;
+  font-size: 0.9rem;
+  margin-bottom: 10px;
+  font-family: "Gudea", sans-serif;
+}
+.post .p-footer {
+  padding: 0 10px 10px;
+}
+
+.nav-cont {
+  display: none;
+  flex-direction: column;
+  width: 200px;
+  margin: 20px 20px 0 0;
+}
+.nav-cont .navcont-temp {
+  display: flex;
+  background-color: #1D1D1D !important;
+  border-radius: 10px;
+  padding: 8px;
+  width: 100%;
+  height: 140px;
+  margin-bottom: 12px;
+}
+.nav-cont .nav-ad1 {
+  background-color: rgb(139, 136, 199);
+  border-radius: 10px;
+  width: 100%;
+  height: 200px;
+  margin-bottom: 12px;
+}
+.nav-cont .sticky-nav {
+  display: flex;
+  background-color: #1D1D1D !important;
+  border-radius: 10px;
+  padding: 8px;
+  width: 100%;
+  height: 420px;
+}
+
+@media (min-width: 768px) {
+  .nav-cont {
+    display: flex;
+  }
+
+  .post {
+    background-color: #1D1D1D !important;
+    border-radius: 10px;
+  }
+}
+@media (min-width: 992px) {
+  .nav-cont {
+    width: 300px;
+  }
+}
+@media (max-width: 767.98px) {
+  .main-cont {
+    padding: 0;
+    margin: 0;
+    max-width: unset;
+    width: 100%;
+  }
+}
+@media (max-width: 340px) {
+  .orderby-value {
+    display: none;
+  }
+
+  .p-option {
+    font-size: 1.3rem !important;
+  }
+}/*# sourceMappingURL=index.css.map */
