--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -1,1 +1,173 @@
-*{}
+@import 'theme';
+
+main{
+    display: flex;
+    flex-direction: row;
+    color: $textcolor;
+}
+
+.posts-cont{
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    .post-options{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 6px;
+        //color: $textcolor;
+        .p-option{
+            font-size: 1.6rem;
+            padding: 10px;
+            text-shadow: 0px 0px 6px $textcolor_boxshadow;
+            font-family: 'Josefin Sans', sans-serif;
+            cursor: pointer;
+            &:hover{
+                text-decoration: underline;
+            }
+        }
+        .po-orderby{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            .orderby-btn{
+                margin-right: 6px;
+            }
+            .orderby-value{
+                font-size: 1.2rem;
+                &:hover{
+                    text-decoration: unset;
+                }
+            }
+        }
+        .po-type{
+            margin-left: auto;
+            margin-right: 16px;
+        }
+    }
+}
+
+.post{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 12px;
+    background-color: $frontbgcolor;
+    &:last-child{
+        margin-bottom: unset;
+    }
+    .p-header{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        .p-title{
+            padding: 10px;
+            font-family: 'Josefin Sans', sans-serif;
+            font-weight: 600;
+        }
+        .p-menu{
+            display: flex;
+            height: 100%;
+            padding: 0 10px;
+            font-size: 2rem;
+        }
+    }
+    .p-body{
+        padding: 0 10px;
+        font-size: 0.9rem;
+        margin-bottom: 10px;
+        font-family: 'Gudea', sans-serif;
+    }
+    .p-footer{
+        padding: 0 10px 10px;
+    }
+}
+
+
+
+
+
+
+
+.nav-cont{
+    display: none;
+    flex-direction: column;
+    width: 200px;
+    margin:20px 20px 0 0;
+    .navcont-temp{
+        display: flex;
+        background-color: $sitebgcolor !important;
+        border-radius: 10px;
+        padding: 8px;
+        width: 100%;
+        height: 140px;
+        margin-bottom: 12px;
+    }
+    .nav-ad1{
+        background-color: rgb(139, 136, 199);
+        border-radius: 10px;
+        width: 100%;
+        height: 200px;
+        margin-bottom: 12px;
+    }
+    .sticky-nav{
+        display: flex;
+        background-color: $sitebgcolor !important;
+        border-radius: 10px;
+        padding: 8px;
+        width: 100%;
+        height: 420px;
+    }
+}
+
+
+
+
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+    .nav-cont{
+        display: flex;
+    }
+    .post{
+        background-color: $sitebgcolor !important;
+        border-radius: 10px;
+    }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    .nav-cont{
+        width: 300px;
+    }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+}
+
+// Max widths
+@media (max-width: 767.98px) {
+    .main-cont{
+        padding: 0;
+        margin: 0;
+        max-width: unset;
+        width: 100%;
+    }
+}
+
+// Custom
+@media (max-width: 340px) {
+    .orderby-value{
+        display: none;
+    }
+    .p-option{
+        font-size: 1.3rem !important;
+    }
+}
