--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -5,7 +5,7 @@ $frontbgcolor: #313131;
 $textcolor:#ffffff;
 $searchplaceholdercolor: #939393;
 
-$textcolor_hover1: #b6c1e3;
+$textcolor_hover1: #cccccc;
 $frontbgcolor_hover1:#373737;
 
 $textcolor_boxshadow:#ffffff50;
