post menu actions

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -29,48 +29,69 @@
             Filter
         </span>
     </div>
-    <div class="post">
-        <div class="p-header">
-            <div class="p-title">
-                <span>Odin the Omnipotent</span>
+    <div class="post-wrap">
+        <div class="post">
+            <div class="p-header">
+                <div class="p-title">
+                    <span>Odin the Omnipotent</span>
+                </div>
+                <div class="p-menu">
+                <i class="bi bi-three-dots"></i>
+                </div>
             </div>
-            <div class="p-menu">
-            <i class="bi bi-three-dots"></i>
+            <div class="p-body">
+                After his father’s death, Odin was not going to be so peaceful. Old ways died as the new skyfather born.
             </div>
-        </div>
-        <div class="p-body">
-            After his father’s death, Odin was not going to be so peaceful. Old ways died as the new skyfather born.
-        </div>
-        <div class="p-footer">
-            <i class="bi bi-hand-thumbs-up p-likebtn"></i>
-            <span class="p-likes">5465</span>
-            <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
-            <span class="p-rate">7.4/10</span>
+            <div class="p-footer">
+                <i class="bi bi-hand-thumbs-up p-likebtn"></i>
+                <span class="p-likes">5465</span>
+                <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
+                <span class="p-rate">7.4/10</span>
 
-            <span class="p-username">MrBombastic</span>
-            <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
+                <span class="p-username">MrBombastic</span>
+                <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
+            </div>
         </div>
     </div>
-    <div class="post">
-        <div class="p-header">
-            <div class="p-title">
-                <span>Davy Jones</span>
+    <div class="post-wrap">
+        <div class="post">
+            <div class="p-header">
+                <div class="p-title">
+                    <span>Davy Jones</span>
+                </div>
+                <div class="p-menu">
+                <i class="bi bi-three-dots p-menubtn"></i>
+                </div>
             </div>
-            <div class="p-menu">
-            <i class="bi bi-three-dots p-menubtn"></i>
+            <div class="p-body">
+                Jones fell in love with the goddess Calypso. He agreed to guide the dead but Calypso was a bi*ch. When he returned from duty, she was not there.
             </div>
-        </div>
-        <div class="p-body">
-            Jones fell in love with the goddess Calypso. He agreed to guide the dead but Calypso was a bi*ch. When he returned from duty, she was not there.
-        </div>
-        <div class="p-footer">
-            <i class="bi bi-hand-thumbs-up p-likebtn"></i>
-            <span class="p-likes">4878</span>
-            <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
-            <span class="p-rate">8.6/10</span>
+            <div class="p-footer">
+                <i class="bi bi-hand-thumbs-up p-likebtn"></i>
+                <span class="p-likes">4878</span>
+                <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
+                <span class="p-rate">8.6/10</span>
 
-            <span class="p-username">TrashyTrash</span>
-            <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
+                <span class="p-username">TrashyTrash</span>
+                <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
+            </div>
+        </div>
+    </div>
+    <div class="post-wrap">
+        <div class="post-menu">
+            <div class="pd-details">
+
+            </div>
+            <div class="pd-right">
+                <div class="pd-close">
+                    <i class="bi bi-x-lg"></i>
+                </div>
+                <div class="pd-actions">
+                    <button type="button" class="pd-saved">Save</button>
+                    <button type="button">Share</button>
+                    <button type="button">Report</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
