--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -7,6 +7,8 @@ $searchplaceholdercolor: #939393;
 
 $textcolor_hover1: #cccccc;
 $frontbgcolor_hover1:#373737;
+$frontbgcolor_hover2:#4E4E4E;
+$frontbgcolor_hover3:#5e5e5e;
 
 $textcolor_boxshadow:#ffffff50;
 $frontbgcolor_boxshadow:#31313150;
