--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -48,12 +48,13 @@ main{
         }
     }
 }
-
+.post-wrap{
+    margin-bottom: 12px;
+    background-color: $frontbgcolor;
+}
 .post{
     display: flex;
     flex-direction: column;
-    margin-bottom: 12px;
-    background-color: $frontbgcolor;
     &:last-child{
         margin-bottom: unset;
     }
@@ -126,6 +127,48 @@ main{
         }
     }
 }
+.post-menu{
+    display: flex; //flex
+    flex-direction: row;
+    .pd-details{
+        flex-grow: 1;
+    }
+    .pd-right{
+        display: flex;
+        flex-direction: column;
+        .pd-close{
+            display: flex;
+            justify-content: end;
+            padding: 4px 10px;
+            font-size: 1.5rem;
+            i{
+                cursor: pointer;
+            }
+        }
+        .pd-actions{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 4px 10px 2px;
+            .pd-saved{
+                background-color: #4A8D5D !important;
+            }
+            button{
+                color: $textcolor;
+                border-radius: 30px;
+                background-color: $frontbgcolor_hover2;
+                outline: none;
+                border: none;
+                margin-bottom: 8px;
+                padding: 2px 10px;
+                transition: 0.2s ease;
+                &:hover{
+                    background-color: $frontbgcolor_hover3;
+                }
+            }
+        }
+    }
+}
 
 
 
@@ -177,7 +220,7 @@ main{
     .nav-cont{
         display: flex;
     }
-    .post{
+    .post-wrap{
         background-color: $sitebgcolor !important;
         border-radius: 10px;
     }
