--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -272,7 +272,7 @@ header .header-wrap {
   transition: 0.3s ease;
 }
 .shorcuts-cont > i:hover {
-  color: #b6c1e3;
+  color: #cccccc;
 }
 .shorcuts-cont > i:last-child {
   margin-right: 0;
