--- a/OmneFictio.Web/wwwroot/css/index.css
+++ b/OmneFictio.Web/wwwroot/css/index.css
@@ -83,10 +83,10 @@ main {
   cursor: pointer;
 }
 .post .p-body {
-  padding: 0 10px;
+  padding: 0 14px;
   font-size: 0.9rem;
-  margin-bottom: 10px;
   font-family: "Gudea", sans-serif;
+  margin-bottom: 10px;
 }
 .post .p-footer {
   font-family: "Itim", cursive;
@@ -128,11 +128,34 @@ main {
 }
 
 .post-menu {
-  display: flex;
+  display: none;
   flex-direction: row;
 }
 .post-menu .pd-details {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+.post-menu .pd-details .pd-heading {
+  font-size: 1.1rem;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 600;
+}
+.post-menu .pd-details .pd-value {
+  font-size: 0.9rem;
+  font-family: "Gudea", sans-serif;
+}
+.post-menu .pd-details .pd-tags {
+  font-size: 0.9rem;
+  font-family: "Gudea", sans-serif;
+  margin: 5px 0 8px;
+}
+.post-menu .pd-details .pd-tags span {
+  margin-right: 6px;
+}
+.post-menu .pd-details .pd-type {
+  margin-bottom: 8px;
 }
 .post-menu .pd-right {
   display: flex;
@@ -158,7 +181,7 @@ main {
 }
 .post-menu .pd-right .pd-actions button {
   color: #ffffff;
-  border-radius: 30px;
+  border-radius: 20px;
   background-color: #4E4E4E;
   outline: none;
   border: none;
