--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -82,10 +82,10 @@ main{
         }
     }
     .p-body{
-        padding: 0 10px;
+        padding: 0 14px;
         font-size: 0.9rem;
-        margin-bottom: 10px;
         font-family: 'Gudea', sans-serif;
+        margin-bottom: 10px;
     }
     .p-footer{
         //color: $textcolor;
@@ -128,10 +128,33 @@ main{
     }
 }
 .post-menu{
-    display: flex; //flex
+    display: none; //flex
     flex-direction: row;
     .pd-details{
         flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        .pd-heading{
+            font-size: 1.1rem;
+            font-family: 'Josefin Sans', sans-serif;
+            font-weight: 600;
+        }
+        .pd-value{
+            font-size: 0.9rem;
+            font-family: 'Gudea', sans-serif;
+        }
+        .pd-tags{
+            font-size: 0.9rem;
+            font-family: 'Gudea', sans-serif;
+            margin: 5px 0 8px;
+            span{
+                margin-right: 6px;
+            }
+        }
+        .pd-type{
+            margin-bottom: 8px;
+        }
     }
     .pd-right{
         display: flex;
@@ -155,7 +178,7 @@ main{
             }
             button{
                 color: $textcolor;
-                border-radius: 30px;
+                border-radius: 20px;
                 background-color: $frontbgcolor_hover2;
                 outline: none;
                 border: none;
